--- a/frontpage.html
+++ b/frontpage.html
@@ -165,7 +165,7 @@
                 <p>&nbsp;</p>
                 <h2>코딩공부 더 간편해질 수 없을까?</h2>
                 <p style="text-align:center">
-                  <img alt height="150" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRe5AdyANCxJizfiAUKJqRGcaMVCI0s7cVaULF9wJAcJA&usqp=CAU&ec=45690269" width="150" class="questionimage">
+                  <img  src="https://cdn.pixabay.com/photo/2015/11/03/08/56/question-mark-1019820_960_720.jpg"  class="questionimage">
                 </p>
                 <p>우리는 정보화 시대에 걸맞게 수많은 코딩 강의들과 사이트들에 노출되어있습니다.<br>
                   이러한 사이트들이 분야에 따라 나눠져 제공된다면<br> 코딩에 관심있는 사람들이 강의를 선택하고 수강하기에 더 편리한 환경이 되지않을까?<br>
@@ -175,7 +175,7 @@
                 <p>&nbsp;</p>
                 <h2>사이트 가이드</h2>
                 <p style="text-align:center">
-                  <img alt height="150" src="https://image.flaticon.com/icons/svg/2004/2004580.svg" width="150" class="computerimage">
+                  <img alt height="302" width="362.5" src="https://cdn.pixabay.com/photo/2016/10/08/04/25/laptop-1723059_1280.png" class="computerimage">
                 </p>
                 <p>코딩윗미는 분야에 따라 코딩사이트들을 안내합니다.<br> 분야들로는"
                   <strong>프로그래밍 언어, 개발, 보안/네트워크, db, 인공지능/머신러닝/딥러닝, 수학(코딩에 필요한), 기타(커뮤니티 등)
