--- a/db_datastructure.html
+++ b/db_datastructure.html
@@ -184,9 +184,7 @@
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://visualgo.net/en">
-                    <span style="text-align: center;font-size:3em; color:#111; letter-spacing:5px;">VISU</span>
-                    <span style="text-align: center;font-size:3em; color:#51F081; letter-spacing:5px;">ALGO</span>
-                    <span style="text-align: center;font-size:1.5em; color:#111;">.net</span>
+                    <span style="text-align: center;font-size:3em; color:#111; letter-spacing:5px;">VISU</span><span style="text-align: center;font-size:3em; color:#51F081; letter-spacing:5px;">ALGO</span><span style="text-align: center;font-size:1.5em; color:#111;">.net</span>
                   </a>
                 </p>
                 <p>&nbsp;</p>
