--- a/etc_license.html
+++ b/etc_license.html
@@ -210,7 +210,11 @@
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://www.comcbt.com/">
-                    <img width="290" height="80" src="https://www.comcbt.com/cbt.gif">
+                    <div class="box">
+                      <div style="padding-top:55px; color:#0107F0;font-size:2em;text-align:center;">
+                        전자문제집 CBT
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
