--- a/math_linearalgebra.html
+++ b/math_linearalgebra.html
@@ -191,16 +191,14 @@
                 </p>
                 <p>&nbsp;</p>
                 <p>
-                  <a href="http://www.kmooc.kr/courses/course-v1:SKKUk+SKKU_2019_06+2020_T1/about">
-                    <img width="360" height="100" src="http://www.kmooc.kr/static/images/common/logo_top.png">
-                  </a>
+                  <div class="kmoocbox">
+                    <div class="kmooc">K-MOOC</div>
+                  </div>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   선형대수학
                 </p>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
                 <p>&nbsp;</p>
               </div>
             </article>
