--- a/math_etc.html
+++ b/math_etc.html
@@ -192,14 +192,16 @@
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://www.edwith.org/search/index?categoryId=248">
-                    <img class="edwithimage" src="https://lh3.googleusercontent.com/angTOgfOI44tirOc61wA8wMakxRWScjjEh_SLBZzo1pyoG0rwjKNPW3tQ6ZrcD7HlfU">
+                    <div class="edwithbox">
+                      <div class="edwith">edwith</div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   edwith -> 데이터 사이언스
                 </p>
-                <p style="margin:0 0;">&nbsp;</p>
+                <p>&nbsp;</p>
               </div>
             </article>
           </div>
