--- a/security_dreamhack.html
+++ b/security_dreamhack.html
@@ -253,18 +253,18 @@
                 <p>
                   <strong>사진을 누르면 해당 사이트의 관련 페이지로 넘어갑니다.</strong>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
                   <p>
                     <a href="https://dreamhack.io/">
-                    <img alt height="300" src="https://www.tradefairdates.com/logos/dreamhack_winter_logo_9767.png"  width="300">
+                      <div class="dreamhackbox">
+                        <div class="dreamhack">dreamhack</div>
+                      </div>
                     </a>
                   </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  dreamhack->해킹/보안설명+웹에서 간단한 실습
-                  </p>
                   <p>&nbsp;</p>
-                <p>&nbsp;</p>
+                </p>
+                <p>
+                dreamhack->해킹/보안설명+웹에서 간단한 실습
+                </p>
               </div>
             </article>
           </div>
