--- a/security_eaglejump.html
+++ b/security_eaglejump.html
@@ -253,18 +253,18 @@
                 <p>
                   <strong>사진을 누르면 해당 사이트의 관련 페이지로 넘어갑니다.</strong>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
                   <p>
                     <a href="https://los.eagle-jump.org/">
-                    <img alt height="315" src="https://res.cloudinary.com/teepublic/image/private/s--XxHCb3y5--/b_rgb:908d91,t_Heather%20Preview/c_limit,f_jpg,h_630,q_90,w_630/v1530742982/production/designs/2857276_0.jpg"  width="315">
+                      <div class="eaglejumpbox">
+                        <div class="eaglejump">eaglejump</div>
+                      </div>
                     </a>
                   </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  eagle-jump->SQL Injection 문제제공
-                  </p>
                   <p>&nbsp;</p>
-                <p>&nbsp;</p>
+                </p>
+                <p>
+                eagle-jump->SQL Injection 문제제공
+                </p>
               </div>
             </article>
           </div>
