--- a/security_edwith.html
+++ b/security_edwith.html
@@ -253,18 +253,18 @@
                 <p>
                   <strong>사진을 누르면 해당 사이트의 관련 페이지로 넘어갑니다.</strong>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
                   <p>
                     <a href="https://www.edwith.org/search/show?searchQuery=%EB%B3%B4%EC%95%88+%ED%95%B4%ED%82%B9+%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC&MAX=20#course">
-                    <img alt src="https://lh3.googleusercontent.com/angTOgfOI44tirOc61wA8wMakxRWScjjEh_SLBZzo1pyoG0rwjKNPW3tQ6ZrcD7HlfU"  class="edwithimage">
+                      <div class="edwithbox">
+                        <div class="edwith">edwith</div>
+                      </div>
                     </a>
                   </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  edwith->보안 네트워크 강의모음
-                  </p>
                   <p>&nbsp;</p>
-                <p>&nbsp;</p>
+                </p>
+                <p>
+                  edwith->보안 네트워크 강의모음
+                </p>
               </div>
             </article>
           </div>
