--- a/security_hackthebox.html
+++ b/security_hackthebox.html
@@ -253,18 +253,18 @@
                 <p>
                   <strong>사진을 누르면 해당 사이트의 관련 페이지로 넘어갑니다.</strong>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
                   <p>
                     <a href="https://www.hackthebox.eu/individuals">
-                    <img alt height="300" src="https://pbs.twimg.com/profile_images/1278681947531644928/Gpj6Vi6h_400x400.jpg"  width="300">
+                      <div class="hacktheboxbox">
+                        <div class="hackthebox">hackthebox</div>
+                      </div>
                     </a>
                   </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  hackthebox->모의해킹 문제제공
-                  </p>
                   <p>&nbsp;</p>
-                <p>&nbsp;</p>
+                </p>
+                <p>
+                hackthebox->모의해킹 문제제공
+                </p>
               </div>
             </article>
           </div>
