--- a/security_pwnable.html
+++ b/security_pwnable.html
@@ -253,28 +253,32 @@
                 <p>
                   <strong>사진을 누르면 해당 사이트의 관련 페이지로 넘어갑니다.</strong>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
                   <p>
                     <a href="https://pwnable.kr/">
-                    <img alt height="361" src="https://blog.theo.com.tw/Writeups/pwnable-kr/pwnable-kr-cmd1/pwnablekr.jpg"  width="361" class="edwithimage">
+                      <div class="pwnablebox">
+                        <div class="pwnable">pwnable.kr</div>
+                      </div>
                     </a>
                   </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  pwnable.kr->난이도별 포너블문제 제공
-                  </p>
                   <p>&nbsp;</p>
-                  <p>
-                    <a href="https://pwnable.tw/">
-                    <img alt height="300" src="https://pwnable.tw/static/image/og_img.png"  width="300" class="edwithimage">
-                    </a>
-                  </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  pwnable.tw->위사이트보다 더 어려운 문제 제공
-                  </p>
-                  <p>&nbsp;</p>
+                </p>
+                <p>
+                pwnable.kr->난이도별 포너블문제 제공
+                </p>
+                <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
+                <p>
+                  <a href="https://www.udemy.com/ko/courses/development/game-development/">
+                    <div class="pwnablebox">
+                      <div class="pwnable">pwnable.tw</div>
+                    </div>
+                  </a>
+                </p>
+                <p>&nbsp;</p>
+              </p>
+              <p>
+                pwnable.tw->위사이트보다 더 어려운 문제 제공
+              </p>
               </div>
             </article>
           </div>
