--- a/security_x86-64.html
+++ b/security_x86-64.html
@@ -253,18 +253,18 @@
                 <p>
                   <strong>사진을 누르면 해당 사이트의 관련 페이지로 넘어갑니다.</strong>
                   <p>&nbsp;</p>
-                  <p>&nbsp;</p>
                   <p>
                     <a href="https://defuse.ca/online-x86-assembler.htm">
-                    <img alt height="320" src="https://png.pngtree.com/png-vector/20190409/ourlarge/pngtree-asm-file-document-icon-png-image_922738.jpg"  width="320" class="edwithimage">
+                      <div class="x86-64box">
+                        <div class="x86-64"> x86-64</div>
+                      </div>
                     </a>
                   </p>
-                  <p style="text-align:center;">&nbsp;</p>
-                  <p>
-                  x86-64 어셈블러->디스어셈블러 웹에서 사용(쉘 코드 -> 헥스)
-                  </p>
                   <p>&nbsp;</p>
-                <p>&nbsp;</p>
+                </p>
+                <p>
+                   x86-64 어셈블러->디스어셈블러 웹에서 사용(쉘 코드 -> 헥스)
+                </p>
               </div>
             </article>
           </div>
