--- a/securityintro.html
+++ b/securityintro.html
@@ -258,7 +258,7 @@
                   <strong>"보안"
                   </strong>&nbsp;</p>
                 <p>
-                  보안은 하드웨어나 소프트웨어의 데이터 손상, 오용등으로부터 컴퓨터를 보호하는 분야입니다.
+                  보안은 컴퓨터를 보호하고자 하드웨어나 소프트웨어의 데이터 손실, 오용등의 문제를 해결하는 분야입니다.
                 </p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
