--- a/mathintro.html
+++ b/mathintro.html
@@ -192,7 +192,7 @@
                 <p style="text-align:center;">&nbsp;</p>
                 <p>
                   프로그래밍을 하다보면 분야에 따라 <strong>"수학"</strong>개념들이 필요합니다.<br>
-                  프로그래밍을 할 때 많이 쓰이는 수학 분야인 미적분, 선형대수학 강의들을 정리했습니다.
+                  프로그래밍을 할 때 많이 쓰이는 수학 분야인 미적분, 선형대수학등의 강의들을 정리했습니다.
                 </p>
               </div>
             </article>
