--- a/aiintro.html
+++ b/aiintro.html
@@ -183,7 +183,7 @@
                   <p>
                     <strong>"인공지능/딥러닝"
                     </strong><br>
-                    인공지능은 인간의 지능을 기계를 통해 구현하는 것이고 딥 러닝은 완전한 머신러닝을 실현하는 기술입니다.
+                    인공지능은 기계를 활용하여 인간의 지능을 구현하는 것이고<br> 딥 러닝은 완전한 머신러닝을 구현하는 기술입니다.
                   </p>
                   <p style="margin:0 0;">&nbsp;</p>
                 </div>
