--- a/etc_license.html
+++ b/etc_license.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="CodingWithMe">
   <meta name="viewport:" content="width=1280">
+  <meta property="og:image" content="https://cofls6581.github.io/codingwithme/프레젠테이션1.jpg" >
   <link rel="stylesheet" type="text/css" href="head.css" media="all">
   <link rel="stylesheet" type="text/css" href="reset.css" media="all">
   <link rel="stylesheet" type="text/css" href="other_page_context.css" media="all">
