--- a/language_js.html
+++ b/language_js.html
@@ -360,7 +360,7 @@
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSHOOL->javascript 라이브러리
+            TCPSHOOL->제이쿼리
           </p>
               </div>
             </article>
