--- a/security_pwnable.html
+++ b/security_pwnable.html
@@ -278,7 +278,7 @@
                 <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>
-                  <a href="https://www.udemy.com/ko/courses/development/game-development/">
+                  <a href="https://pwnable.tw/">
                     <div class="pwnablebox">
                       <div class="pwnable">pwnable.tw</div>
                     </div>
