--- a/security_jsnice.html
+++ b/security_jsnice.html
@@ -266,7 +266,7 @@
                   <p>
                     <a href="http://www.jsnice.org/">
                       <div class="jsnicebox">
-                        <div class="jsnice">nice</div>
+                        <div class="jsnice">JS NICE</div>
                       </div>
                     </a>
                   </p>
