--- a/security_hackctf.html
+++ b/security_hackctf.html
@@ -266,7 +266,7 @@
                   <p>
                     <a href="https://ctf.j0n9hyun.xyz/">
                       <div class="hackCTFbox">
-                        <div class="hackCTF">hackCTF</div>
+                        <div class="hackCTF">HackCTF</div>
                       </div>
                     </a>
                   </p>
