--- a/language_HTML.html
+++ b/language_HTML.html
@@ -318,7 +318,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSHOOL-> 웹
+                  TCPSCHOOL-> 웹
                 </p>
               </div>
             </article>
