--- a/language_java.html
+++ b/language_java.html
@@ -360,7 +360,7 @@
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSHOOL->java
+            TCPSCHOOL->java
           </p>
               </div>
             </article>
