--- a/language_mysql.html
+++ b/language_mysql.html
@@ -318,7 +318,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSHOOL-> 데이터베이스관리
+                  TCPSCHOOL-> 데이터베이스관리
                 </p>
               </div>
             </article>
