--- a/language_c.html
+++ b/language_c.html
@@ -358,7 +358,7 @@
               <p>&nbsp;</p>
             </p>
             <p>
-              TCPSHOOL->C
+              TCPSCHOOL->C
             </p>
             <p style="margin:0 0;"class="line">&nbsp;</p>
             <p>&nbsp;</p>
