--- a/language_css.html
+++ b/language_css.html
@@ -318,7 +318,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSHOOL-> 웹
+                  TCPSCHOOL-> 웹
                 </p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
