--- a/language_python.html
+++ b/language_python.html
@@ -360,7 +360,7 @@
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSHOOL->python
+            TCPSCHOOL->python
           </p>
               </div>
             </article>
