--- a/develop_web.html
+++ b/develop_web.html
@@ -252,7 +252,7 @@
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSHOOL->웹베이직 학습
+            TCPSCHOOL->웹베이직 학습
           </p>
               </div>
             </article>
