--- a/develop_game.html
+++ b/develop_game.html
@@ -151,7 +151,7 @@
       <div id="breadcrumb">
         <div class="wrapper">
           <span id="breadcump_line">
-          코딩윗미 > 개발 > 모바일
+          코딩윗미 > 개발 > 게임
           </span>
         </div>
       </div>
