--- a/aiintro.html
+++ b/aiintro.html
@@ -191,8 +191,9 @@
                     <img width="314" height="267" src="https://cdn.pixabay.com/photo/2016/10/18/19/40/anatomy-1751201__340.png">
                   </p>
                   <p>
-                    <strong>"인공지능/딥러닝"
-                    </strong><br>
+                    <strong>"인공지능/딥러닝"</strong>&nbsp;
+                  </p>
+                  <p>
                     인공지능은 기계를 활용하여 인간의 지능을 구현하는 것이고<br> 딥 러닝은 완전한 머신러닝을 구현하는 기술입니다.
                   </p>
                   <p style="margin:0 0;">&nbsp;</p>
