--- a/etc_problem.html
+++ b/etc_problem.html
@@ -220,57 +220,88 @@
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://www.acmicpc.net/">
-                    <img src="https://d2gd6pc034wcta.cloudfront.net/images/logo@2x.png"  width="393px" height="90px">
+                    <div class="box">
+                      <div style="font-size:3em;text-align:center;letter-spacing:5px;font-weight:lighter;padding:20px 0px 0px 0px;">
+                        BACKJOON<div style="font-size:0.5em;line-height:0.05"><br>ONLINE JUDGE</div>
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   백준
                 </p>
+                <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://programmers.co.kr/learn/challenges">
-                    <img style="padding:10px 15px; background-color:#111;" width="364" height="68" src="https://programmers.co.kr/assets/bi-programmers-light-0d164d49b51a123bab5cca11106145d6fac5a5ac04b8646780369c2a5bc0dd79.png">
+                    <div class="box" style="width: 360px;height:90px;padding:45px 0px;margin:0px auto;">
+                      <div style="padding:0px 0px 10px 0px; background-color:#111;" width="380" height="50">
+                        <div style="text-align:center;color:#fff;font-size:2.5em;font-weight:bold;">
+                          programmers
+                        </div>
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   프로그래머스
                 </p>
+                <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://swexpertacademy.com/main/main.do">
-                    <img width="432" height="44" src="https://swexpertacademy.com/main/images/sw_img/main_logo.png">
+                    <div class="box" style="width:500px">
+                      <div style="text-align:center;font-size:2.5em;color:#111;padding:50px 0px;">
+                        <span style="font-weight:bold;">SW</span> Expert Academy
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   삼성SW 익스퍼트
                 </p>
+                <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://www.oncoder.com/">
-                    <img width="300" height="60" src="https://www.oncoder.com/images/oncoder_normal_100.png">
+                    <div class="box">
+                      <div style="text-align:center;font-size:4em;padding:13px 0px 14px 0px;">
+                        <span style="color:#1293F5">on</span>coder
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   온코더
                 </p>
+                <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>
                   <a href="http://www.jungol.co.kr/">
-                    <img width="300" height="140" src="http://www.jungol.co.kr/theme/jungol/img/layout/hd_logo.png">
+                    <div class="box">
+                      <div style="text-align:center;font-size:4em;padding:24px 0px 0px 0px;font-weight:bolder;color:#002357">
+                        JUNGOL
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
                   정올
                 </p>
+                <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
                 <p>
                   <a href="https://dojang.io/">
-                    <img style="padding:10px 15px; background-color:#009fe5;"width="307.5" height="75" src="https://dojang.io/theme/image.php/cdio/theme/1593496993/home/logo">
+                    <div class="box">
+                      <div style="text-align:center;font-size:3em;padding:37.5px 0px;line-height:1;letter-spacing:0.25px;font-weight:bold;color:#23D0FF">
+                        코딩<br>도장
+                      </div>
+                    </div>
                   </a>
                 </p>
                 <p>&nbsp;</p>
