--- a/dbintro.html
+++ b/dbintro.html
@@ -196,7 +196,7 @@
                 </p>
                 <p>
                   즉 database는 데이터의 집합체를 말합니다.<br>
-                  효율성을 위해 중복되는 데이터를 제거하고 구조화 등을 진행하며 데이터베이스 관리 시스템(미들웨어)을 통해 db를 관리합니다.
+                  효율성을 위해 중복되는 데이터를 제거하고 구조화 등을 진행하며<br>데이터베이스 관리 시스템(미들웨어)을 통해 db를 관리합니다.
                 </p>
                 <p style="margin:0 0;">&nbsp;</p>
                 <p style="margin:0 0;">&nbsp;</p>
