--- a/develop_mobile.html
+++ b/develop_mobile.html
@@ -231,7 +231,7 @@
               <p>
                 <a href="https://www.udemy.com/ko/courses/development/mobile-apps/">
                   <div class="udemybox">
-                    <div class="udemy">udemy</div>
+                    <div class="udemy">Udemy</div>
                   </div>
                 </a>
               </p>
