--- a/develop_web.html
+++ b/develop_web.html
@@ -231,7 +231,7 @@
               <p>
                 <a href="https://www.udemy.com/ko/courses/development/web-development/">
                   <div class="udemybox">
-                    <div class="udemy">udemy</div>
+                    <div class="udemy">Udemy</div>
                   </div>
                 </a>
               </p>
@@ -245,14 +245,14 @@
             <p>
               <a href="http://www.tcpschool.com/webbasic/intro">
                 <div class="tcpschoolbox">
-                  <div class="tcpschool">tcpschool</div>
+                  <div class="tcpschool">TCPSchool</div>
                 </div>
               </a>
             </p>
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSCHOOL->웹베이직 학습
+            TCPSchool->웹베이직 학습
           </p>
               </div>
             </article>
