--- a/language_c.html
+++ b/language_c.html
@@ -339,7 +339,7 @@
               <p>
                 <a href="https://www.udemy.com/topic/c-programming/">
                   <div class="udemybox">
-                    <div class="udemy">udemy</div>
+                    <div class="udemy">Udemy</div>
                   </div>
                 </a>
               </p>
@@ -351,14 +351,14 @@
               <p>
                 <a href="http://www.tcpschool.com/c/intro">
                   <div class="tcpschoolbox">
-                    <div class="tcpschool">tcpschool</div>
+                    <div class="tcpschool">TCPSchool</div>
                   </div>
                 </a>
               </p>
               <p>&nbsp;</p>
             </p>
             <p>
-              TCPSCHOOL->C
+              TCPSchool->C
             </p>
             <p style="margin:0 0;"class="line">&nbsp;</p>
             <p>&nbsp;</p>
