--- a/language_js.html
+++ b/language_js.html
@@ -325,7 +325,7 @@
                 <p>
                   <a href="https://www.udemy.com/ko/topic/javascript/">
                     <div class="udemybox">
-                      <div class="udemy">udemy</div>
+                      <div class="udemy">Udemy</div>
                     </div>
                   </a>
                 </p>
@@ -339,28 +339,28 @@
               <p>
                 <a href="http://www.tcpschool.com/javascript/intro">
                   <div class="tcpschoolbox">
-                    <div class="tcpschool">tcpschool</div>
+                    <div class="tcpschool">TCPSchool</div>
                   </div>
                 </a>
               </p>
               <p>&nbsp;</p>
             </p>
             <p>
-              TCPSHOOL->javascript
+              TCPSchool->javascript
             </p>
             <p style="margin:0 0;"class="line">&nbsp;</p>
             <p>&nbsp;</p>
             <p>
               <a href="http://www.tcpschool.com/jquery/intro">
                 <div class="tcpschoolbox">
-                  <div class="tcpschool">tcpschool</div>
+                  <div class="tcpschool">TCPSchool</div>
                 </div>
               </a>
             </p>
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSCHOOL->제이쿼리
+            TCPSchool->제이쿼리
           </p>
               </div>
             </article>
