--- a/language_mysql.html
+++ b/language_mysql.html
@@ -311,14 +311,14 @@
                   <p>
                     <a href="http://www.tcpschool.com/mysql/intro">
                       <div class="tcpschoolbox">
-                        <div class="tcpschool">tcpschool</div>
+                        <div class="tcpschool">TCPSchool</div>
                       </div>
                     </a>
                   </p>
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSCHOOL-> 데이터베이스관리
+                  TCPSchool-> 데이터베이스관리
                 </p>
               </div>
             </article>
