--- a/language_xml.html
+++ b/language_xml.html
@@ -311,14 +311,14 @@
                   <p>
                     <a href="http://www.tcpschool.com/xml/intro">
                       <div class="tcpschoolbox">
-                        <div class="tcpschool">tcpschool</div>
+                        <div class="tcpschool">TCPSchool</div>
                       </div>
                     </a>
                   </p>
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                TCPSCHOOL-> 데이터구조기술언어
+                TCPSchool-> 데이터구조기술언어
                 </p>
               </div>
             </article>
