--- a/language_c++.html
+++ b/language_c++.html
@@ -325,7 +325,7 @@
                 <p>
                   <a href="https://www.udemy.com/ko/topic/c-plus-plus/">
                     <div class="udemybox">
-                      <div class="udemy">udemy</div>
+                      <div class="udemy">Udemy</div>
                     </div>
                   </a>
                 </p>
@@ -339,14 +339,14 @@
               <p>
                 <a href="http://www.tcpschool.com/cpp/intro">
                   <div class="tcpschoolbox">
-                    <div class="tcpschool">tcpschool</div>
+                    <div class="tcpschool">TCPSchool</div>
                   </div>
                 </a>
               </p>
               <p>&nbsp;</p>
             </p>
             <p>
-              TCPSCHOOL->C++
+              TCPSchool->C++
             </p>
             <p style="margin:0 0;"class="line">&nbsp;</p>
             <p>&nbsp;</p>
