--- a/language_csharp.html
+++ b/language_csharp.html
@@ -325,7 +325,7 @@
                 <p>
                   <a href="https://www.udemy.com/ko/topic/c-sharp/">
                     <div class="udemybox">
-                      <div class="udemy">udemy</div>
+                      <div class="udemy">Udemy</div>
                     </div>
                   </a>
                 </p>
