--- a/language_css.html
+++ b/language_css.html
@@ -311,14 +311,14 @@
                   <p>
                     <a href="http://www.tcpschool.com/css/intro">
                       <div class="tcpschoolbox">
-                        <div class="tcpschool">tcpschool</div>
+                        <div class="tcpschool">TCPSchool</div>
                       </div>
                     </a>
                   </p>
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSCHOOL-> 웹
+                  TCPSchool-> 웹
                 </p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
