--- a/language_python.html
+++ b/language_python.html
@@ -339,7 +339,7 @@
               <p>
                 <a href="https://www.udemy.com/ko/topic/python/">
                   <div class="udemybox">
-                    <div class="udemy">udemy</div>
+                    <div class="udemy">Udemy</div>
                   </div>
                 </a>
               </p>
@@ -353,14 +353,14 @@
             <p>
               <a href="http://www.tcpschool.com/python2018/intro">
                 <div class="tcpschoolbox">
-                  <div class="tcpschool">tcpschool</div>
+                  <div class="tcpschool">TCPSchool</div>
                 </div>
               </a>
             </p>
             <p>&nbsp;</p>
           </p>
           <p>
-            TCPSCHOOL->python
+            TCPSchool->python
           </p>
               </div>
             </article>
