--- a/ai_deeplearning.html
+++ b/ai_deeplearning.html
@@ -274,7 +274,11 @@
                   <p>&nbsp;</p>
                   <p>
                     <a href="https://www.mindmeister.com/ko/812276967/_?fullscreen=1">
-
+                      <div class="box">
+                        <div style="padding:30px 0px 0px 27px;font-size:1.5em;line-height:1">
+                            <span style="font-size:3.5em">MIND</span><br>meister
+                        </div>
+                      </div>
                     </a>
                   </p>
                   <p>&nbsp;</p>
