--- a/etc_contest.html
+++ b/etc_contest.html
@@ -221,7 +221,7 @@
                 <p>
                   <a href="https://codingcompetitions.withgoogle.com/codejam">
                     <div class="box">
-                      <div style="padding-top: 30px;text-align:center;font-size:3.5em;font-weight:bold">
+                      <div style="padding-top: 30px;text-align:center;font-size:3.5em;font-weight:bold;color:#111;">
                         code jam
                       </div>
                     </div>
