--- a/etc_lecture.html
+++ b/etc_lecture.html
@@ -234,7 +234,7 @@
                 <p>
                   <a href="https://coding.yah.ac/">
                     <div class="box "style="background-color:#AAA;">
-                      <div style="text-align:center;font-size:3em;color:#FFF;padding:40px 0px 0px 0px;">
+                      <div style="text-align:center;font-size:3em;color:#FFF;padding:40px 0px 0px 0px;font-weight:bold">
                         코딩야학
                       </div>
                     </div>
