--- a/math_etc.html
+++ b/math_etc.html
@@ -209,7 +209,7 @@
                 </p>
                 <p>&nbsp;</p>
                 <p>
-                  edwith -> 데이터 사이언스
+                  edwith -> 수학
                 </p>
                 <p>&nbsp;</p>
               </div>
