--- a/math_linearalgebra.html
+++ b/math_linearalgebra.html
@@ -201,9 +201,11 @@
                 </p>
                 <p>&nbsp;</p>
                 <p>
-                  <div class="kmoocbox">
-                    <div class="kmooc">K-MOOC</div>
-                  </div>
+                  <a href="http://www.kmooc.kr/courses/course-v1:SKKUk+SKKU_2019_06+2020_T1/about">
+                    <div class="kmoocbox">
+                      <div class="kmooc">K-MOOC</div>
+                    </div>
+                  </a>
                 </p>
                 <p>&nbsp;</p>
                 <p>
