--- a/frontpage.html
+++ b/frontpage.html
@@ -187,9 +187,9 @@
                   <img alt height="302" width="362.5" src="https://cdn.pixabay.com/photo/2016/10/08/04/25/laptop-1723059_1280.png" class="computerimage">
                 </p>
                 <p>코딩윗미는 분야에 따라 코딩사이트들을 안내합니다.<br> 분야들로는"
-                  <strong>프로그래밍 언어, 개발, 보안/네트워크, db, 인공지능/머신러닝/딥러닝, 수학(코딩에 필요한), 기타(커뮤니티 등)
+                  <strong>프로그래밍 언어, 개발, 보안/네트워크, db, 인공지능/머신러닝/딥러닝,<br>수학(코딩에 필요한), 기타(커뮤니티 등)
                   </strong>
-                  "를 제공하고 있으며 각 분야별로 사이트들이 소개되어있고<br> 그 중 본인에게 맞는 사이트를 선택, 수강하시면 됩니다.<br>
+                  "를 제공하고 있으며,<br>각 분야별로 사이트들이 소개되어있고<br> 그 중 본인에게 맞는 사이트를 선택, 수강하시면 됩니다.<br>
                    표기된 사이트들에 대해 일절 광고나 협찬을 받지 않았습니다.
                 </p>
                 <p>&nbsp;</p>
