--- a/language_xml.html
+++ b/language_xml.html
@@ -318,7 +318,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                TCPSchool-> 데이터구조기술언어
+                TCPSchool -> XML
                 </p>
               </div>
             </article>
