--- a/languageintro.html
+++ b/languageintro.html
@@ -327,7 +327,7 @@
                               <strong>웹</strong> -> html, css, js..
                           </li>
                           <li>
-                                <strong>모바일</strong> -> java, kotlin, js, object, c, swift..
+                                <strong>모바일</strong> -> java, kotlin, js, objective-c, swift..
                           </li>
                           <li>
                                 <strong>게임</strong> -> c, c++, c#, js..
