--- a/language_c++.html
+++ b/language_c++.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
