--- a/language_mysql.html
+++ b/language_mysql.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -317,7 +317,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSchool -> MYSQL
+                  TCPSchool -> MYSQL(관계형 데이터베이스 관리 시스템)
                 </p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
