--- a/language_spring.html
+++ b/language_spring.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -317,7 +317,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                인프런 -> spring
+                인프런 -> spring 프레임워크
                 </p>
                 <p style="margin:0 0;"class="line">&nbsp;</p>
                 <p>&nbsp;</p>
@@ -331,7 +331,7 @@
                 <p>&nbsp;</p>
               </p>
               <p>
-              유데미 -> spring
+              유데미 -> spring 프레임워크
             </p>
               </div>
             </article>
