--- a/language_xml.html
+++ b/language_xml.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -318,7 +318,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                TCPSchool -> XML
+                TCPSchool -> XML 마크업언어
                 </p>
               </div>
             </article>
