--- a/languageintro.html
+++ b/languageintro.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -313,6 +313,7 @@
                   </strong>&nbsp;</p>
                 <p>
                   프로그래밍 언어는 소프트웨어를 작성하기 위한 언어로 프로그래밍을 하기 위해선 필수적으로 공부해야 되는 영역입니다.
+                  <br>추가로 프레임워크나 라이브러리 등도 이 배너에 같이 소개돼있으니 참고 바랍니다.
                 </p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
@@ -324,7 +325,7 @@
                   간단하게 분야별 언어들 중 일부를 분류해보면 아래와 같습니다. <br>개인마다 선호하는 언어가 다르므로 참고만 하시길 바랍니다.
                       <ul style="text-align:center">
                         <li>
-                              <strong>웹</strong> -> html, css, js..
+                              <strong>웹</strong> -> 프론트엔드 js/백엔드 java, kotlin, js, python..
                           </li>
                           <li>
                                 <strong>모바일</strong> -> java, kotlin, js, objective-c, swift..
