--- a/language_ajax.html
+++ b/language_ajax.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -317,7 +317,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSchool -> Ajax
+                  TCPSchool -> Ajax 라이브러리
                 </p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
