--- a/language_css.html
+++ b/language_css.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -317,7 +317,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                  TCPSchool -> CSS
+                  TCPSchool -> CSS(스타일 시트 언어)
                 </p>
                   <p>&nbsp;</p>
                   <p>&nbsp;</p>
