--- a/language_json.html
+++ b/language_json.html
@@ -211,7 +211,7 @@
                     <div class="label">
                       <a href="language_js.html" class="depth_0">
                         <span class="title">
-                          Java script
+                          JavaScript
                         </span>
                       </a>
                     </div>
@@ -317,7 +317,7 @@
                   <p>&nbsp;</p>
                 </p>
                 <p>
-                    TCPSchool -> JSON
+                    TCPSchool -> JSON(JavaScript Object Notation)
                 </p>
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
