--- a/languageintro.html
+++ b/languageintro.html
@@ -325,7 +325,7 @@
                   간단하게 분야별 언어들 중 일부를 분류해보면 아래와 같습니다. <br>개인마다 선호하는 언어가 다르므로 참고만 하시길 바랍니다.
                       <ul style="text-align:center">
                         <li>
-                              <strong>웹</strong> -> 프론트엔드 js/백엔드 java, kotlin, js, python..
+                              <strong>웹</strong> -> 프론트엔드 js../백엔드 java, kotlin, js, python..
                           </li>
                           <li>
                                 <strong>모바일</strong> -> java, kotlin, js, objective-c, swift..
